objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief__c</fullName>
        <label>Brief Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Career_Objective__c</fullName>
        <label>Career Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Re enter chai ra email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrolled Full Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enter__c</fullName>
        <label>Entrance Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <inlineHelpText>Enter you Father Name</inlineHelpText>
        <label>Father Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_Name__c</fullName>
        <inlineHelpText>Pls Enter Mother Name</inlineHelpText>
        <label>Mother Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Pls Enter the name</description>
        <inlineHelpText>Enter you Good Name</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passout?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>Enter the Phone Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Salesforce_Role__c</fullName>
        <label>Salesforce Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>ARCH</fullName>
                </value>
                <value>
                    <fullName>PROJECT MANAGER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_skill_set__c</fullName>
        <label>Salesforce skill set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Salesforce_Role__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Administration</fullName>
                </value>
                <value>
                    <fullName>Salesforce Development</fullName>
                </value>
                <value>
                    <fullName>Salesforce Lightning</fullName>
                </value>
                <value>
                    <fullName>Salesforce Integration</fullName>
                </value>
                <value>
                    <fullName>Salesforce CPQ</fullName>
                </value>
                <value>
                    <fullName>Salesforce Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Salesforce Einstein Analytics</fullName>
                </value>
                <value>
                    <fullName>Salesforce Certifications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Commerce</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weekdays__c</fullName>
        <label>Weekdays</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Enroll__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Weekdays</valueSetName>
        </valueSet>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Passout__c</columns>
        <columns>Enroll__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{0000}</displayFormat>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>